# waypoint

./: Cargo.toml  build.rs  default_config  meson.build  shell.nix  waypoint.c
crates/ei/: Cargo.toml
crates/ei/src/: lib.rs
crates/ei_scanner/: Cargo.toml
crates/ei_scanner/src/: lib.rs  protocol.rs
crates/scfg/: Cargo.toml
crates/scfg/src/: lib.rs
crates/wayland/: Cargo.toml
crates/wayland/src/: lib.rs
crates/wayland_scanner/: Cargo.toml
crates/wayland_scanner/src/: lib.rs  protocol.rs
include/: buffer.h  meson.build  waypoint.h
protocol/: ei.xml  meson.build
src/: buffer.c  config.rs  draw.c  listeners.c  main.c  main.rs  meson.build  region.rs  scfg.rs  waypoint.c  waypoint.h
