[package]
name = "waypoint"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
expect-test = "1.4.1"
handy = "0.1.4"
memfd = "0.6.3"
memmap2 = "0.5.10"
xkbcommon = "0.5.0"

[dependencies.nix]
version = "0.26.2"
default-features = false
features = ["time"]

[dependencies.wayland-client]
version = "0.30.1"
default_features = false

[dependencies.wayland-protocols]
version = "0.30.0"
features = ["client", "staging", "unstable"]

[dependencies.wayland-protocols-wlr]
version = "0.1.0"
features = ["client"]

[dependencies.tiny-skia]
version = "0.8.3"
default-features = false
features = ["std", "simd"]
