[package]
name = "waypoint"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
bitflags = "2.3.3"
bytemuck = "1.13.1"
calloop = "0.14.1"
calloop-wayland-source = "0.4.0"
handy = "0.1.4"
memfd = "0.6.3"
memmap2 = "0.5.10"
reis = "0.4.0"
waypoint_scfg = { version = "0.0.0", path = "crates/scfg" }
xkbcommon = "0.5.0"

[dependencies.wayland-client]
version = "0.31.7"
default-features = false

[dependencies.wayland-protocols]
version = "0.32.5"
features = ["client", "staging", "unstable"]

[dependencies.wayland-protocols-wlr]
version = "0.3.5"
features = ["client"]

[dependencies.tiny-skia]
version = "0.8.3"
default-features = false
features = ["std", "simd"]

[workspace]
resolver = "2"
members = ["crates/*"]
