[package]
name = "waypoint"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
bitflags = "2.3.3"
bytemuck = "1.13.1"
handy = "0.1.4"
memfd = "0.6.3"
memmap2 = "0.5.10"
waypoint_scfg = { version = "0.0.0", path = "crates/scfg" }
wayland = { path = "crates/wayland" }
ei = { path = "crates/ei" }
rustix = { version = "0.38.4", features = ["event"] }
kbvm = "0.1.3"

[dependencies.tiny-skia]
version = "0.8.3"
default-features = false
features = ["std", "simd"]

[build-dependencies]
wayland_scanner = { path = "crates/wayland_scanner" }
ei_scanner = { path = "crates/ei_scanner" }

[workspace]
resolver = "2"
members = ["crates/*"]
